--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 /* Add CSS rule to universal selector */
 
-* {}
+* {
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+    border: 1px solid black;
+}
 
 /* Add CSS rule to class selector */
 
