--- a/style.css
+++ b/style.css
@@ -4,22 +4,20 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px solid black;
 }
 
 /* Add CSS rule to class selector */
 
 .navbar-container {
     display: flex;
-    border: 3px solid green;
-    height: 100px;
+    border: 3px solid #e4e7e4;
+    height: 23px;
 }
 
 /* Add CSS rule to class selector */
 
 .navbar {
     display: flex;
-    border: 3px solid #dbdbdb;
     flex: 1;
 }
 
@@ -30,7 +28,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid white;
+    font-size: 8px;
+    border-right: 1px solid #b7b6b6;
 }
 
 /* Add CSS rule to type selector */
@@ -39,9 +38,9 @@ a {
     display: flex;
     flex: 1;
     align-self: flex-start;
-    height: 50px;
     align-items: center;
     justify-content: center;
     text-decoration: none;
     color: black;
+    height: 17px;
 }
