--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ a {
     height: 17px;
 }
 
+/* Add CSS rule to type selector with pseudo class */
+
 a:hover {
     background-color: #e7e7e7c9;
 }
