--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ a {
     display: flex;
     text-decoration: none;
     color: black;
-    margin: 10px 50px;
+    padding: 10px 25px;
+    margin: 0px 25px;
 }
 
 .navbar > :not(:last-child) {
