--- a/style.css
+++ b/style.css
@@ -29,8 +29,9 @@ a {
     display: flex;
     text-decoration: none;
     color: black;
-    padding: 10px 25px;
+    padding: 7px 25px;
     margin: 0px 25px;
+    font-size:12px;
 }
 
 .navbar > :not(:last-child) {
