--- a/style.css
+++ b/style.css
@@ -84,3 +84,19 @@ a {
 /* Stylize grouping selectors  */
 
 .home, .about, .news, .press, .contact {}
+
+/* Stylize the descendant combinator */
+
+
+
+/* Stylize the descendant combinator */
+
+
+
+/* Stylize the descendant combinator */
+
+
+
+/* Stylize the descendant combinator */
+
+
