Add CSS selectors

--- a/style.css
+++ b/style.css
@@ -97,6 +97,8 @@ a {
 
 /* Stylize the class selector  */
 
-
+.five {}
 
 /* Stylize the descendant combinator, except the last child  */
+
+.five div {}
