--- a/style.css
+++ b/style.css
@@ -121,3 +121,10 @@ a {
     padding-right: 70px;
     justify-content: center;
 }
+
+/* Stylize the class */
+
+
+
+/* Stylize the descendant combinators */
+
