--- a/style.css
+++ b/style.css
@@ -180,3 +180,16 @@ a {
 .seven {
     justify-content: space-between;
 }
+
+/* Add CSS rule for the descendant combinator except for the last child */
+
+
+
+/* Add CSS rule for the descendant combinator */
+
+
+
+/* Add CSS rule for the descendant combinator */
+
+
+
