--- a/style.css
+++ b/style.css
@@ -1,2 +1,17 @@
+/* Add styles to the universal selector  */
 
 
+
+/* Add CSS rule to the class */
+
+
+
+/* Add CSS rule to the class */
+
+
+
+/* Add CSS rule to the descendant combinator */
+
+
+
+/* Add CSS rule to the type selector with pseudo class */
