--- a/style.css
+++ b/style.css
@@ -1,19 +1,40 @@
 /* Add styles to the universal selector  */
 
-* {}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 /* Add CSS rule to the class */
 
-.flex-container {}
+.flex-container {
+    display: flex;
+    height: 100px;
+    border: 1px solid black;
+    justify-content: space-between;
+}
 
 /* Add CSS rule to the class */
 
-.flex-item {}
+.flex-item {
+    width: 250px;
+    border: 1px solid black;
+}
 
 /* Add CSS rule to the descendant combinator */
 
-.flex-item a {}
+.flex-item a {
+    height: 100%;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    padding: 38px 0;
+}
 
 /* Add CSS rule to the type selector with pseudo class */
 
-.a:hover {}
+a:hover {
+    background-color: #ece6e6;
+}
