--- a/style.css
+++ b/style.css
@@ -38,3 +38,13 @@
 a:hover {
     background-color: #ece6e6;
 }
+
+/* Add CSS rule to the chaining selector */
+
+
+
+/* Add CSS rule to the chaining selector */
+
+
+
+/* Add CSS rule to the chaining selector */
