Add declarations for each CSS rule

--- a/style.css
+++ b/style.css
@@ -41,10 +41,24 @@ a:hover {
 
 /* Add CSS rule to the chaining selector */
 
-.flex-item.first {}
+.flex-item.first {
+    border-left: none;
+    border-top: none;
+    border-bottom: none;
+}
 
 /* Add CSS rule to the chaining selector */
 
-
+.flex-item.second {
+    border-bottom: none;
+    border-top: none;
+}
 
 /* Add CSS rule to the chaining selector */
+
+.flex-item.third {
+    border-top: none;
+    border-right: none;
+    border-bottom: none;
+    background: black;
+}
