--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@
     display: flex;
     height: 100px;
     border: 1px solid black;
-    justify-content: space-between;
+    justify-content: center;
+    padding: 10px 0;
 }
 
 /* Add CSS rule to the class */
