--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
     display: block;
     text-align: center;
     text-decoration: none;
-    color: black;
+    color: white;
     padding: 29px 0;
 }
 
