--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
 .flex-item {
     width: 250px;
     border: 1px solid black;
+    background: black;
 }
 
 /* Add CSS rule to the descendant combinator */
