--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 /* Add CSS rule to the class */
 
 .flex-item {
-    width: 250px;
+    flex: 1;
     border: 1px solid black;
     background: black;
 }
@@ -40,6 +40,7 @@
     display: flex;
     justify-content: space-between;
     flex: 1;
+    gap:10px;
     margin: 0 10px;
 }
 
