--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     border: 1px solid black;
     justify-content: center;
     padding: 10px 0;
+    background:indianred;
 }
 
 /* Add CSS rule to the class */
