--- a/style.css
+++ b/style.css
@@ -11,17 +11,16 @@
 .flex-container {
     display: flex;
     height: 100px;
-    border: 1px solid black;
+    border: 6px double black;
     justify-content: center;
     padding: 10px 0;
-    background:indianred;
+    background: indianred;
 }
 
 /* Add CSS rule to the class */
 
 .flex-item {
     flex: 1;
-    border: 1px solid black;
     background: black;
 }
 
@@ -32,17 +31,19 @@
     text-align: center;
     text-decoration: none;
     color: white;
-    padding: 29px 0;
+    height: 54px;
+    padding: 18px 0;
 }
 
 /* Add CSS rule to the class */
 
 .flex-inner {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex: 1;
-    gap: 70px;
-    margin: 0 50px;
+    gap: 80px;
+    margin: 5px 100px;
+    border: 3px solid #ffb00747;
 }
 
 /* Add CSS rule to the type selector */
