--- a/style.css
+++ b/style.css
@@ -23,17 +23,18 @@
     flex: 1;
     background: black;
     border: 3px solid lightcoral;
-    border-radius: 2px;
+    border-radius: 10px;
 }
 
 /* Add CSS rule to the descendant combinator */
 
 .flex-item a {
-    display: block;
-    text-align: center;
+    display: flex;
+    justify-content: center;
     text-decoration: none;
     color: white;
-    padding: 13px 0;
+    align-items: center;
+    height: 100%;
 }
 
 /* Add CSS rule to the class */
@@ -44,7 +45,6 @@
     flex: 1;
     gap: 80px;
     margin: 5px 100px;
-    border: 3px solid #ffb00747;
 }
 
 /* Add CSS rule to the type selector */
