--- a/style.css
+++ b/style.css
@@ -10,11 +10,10 @@
 
 .flex-container {
     display: flex;
-    height: 100px;
     border: 6px double black;
     justify-content: center;
-    padding: 10px 0;
     background: indianred;
+    padding: 15px 0;
 }
 
 /* Add CSS rule to the class */
@@ -33,8 +32,7 @@
     justify-content: center;
     text-decoration: none;
     color: white;
-    align-items: center;
-    height: 100%;
+    padding: 20px 0;
 }
 
 /* Add CSS rule to the class */
@@ -45,6 +43,7 @@
     flex: 1;
     gap: 80px;
     margin: 5px 100px;
+    flex-wrap: wrap;
 }
 
 /* Add CSS rule to the type selector */
